--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>hw01</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBO1tPKwx1RPL0jT0wvmXRFUPqEvJ9qYgw&libraries=places"></script>
   </head>
   <body>
     <div id="app"></div>
